--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<!-- index.html --><!DOCTYPE html><html lang="en">
+<!DOCTYPE html>
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -51,132 +52,46 @@
   <script>
     const btn1 = document.getElementById("btn1");
     const btn2 = document.getElementById("btn2");
-    const notif = document.getElementById("notification");function delayCheck(btnKey, btnEl) {
-  const openedAt = Date.now();
-  window.addEventListener("focus", () => {
-    const timeAway = Date.now() - openedAt;
-    if (timeAway < 3000) {
-      notif.style.display = "block";
-      setTimeout(() => notif.style.display = "none", 3000);
-    } else {
-      localStorage.setItem(btnKey, "done");
-      btnEl.classList.add("completed");
-      checkProgress();
+    const notif = document.getElementById("notification");
+
+    function delayCheck(btnKey, btnEl) {
+      const openedAt = Date.now();
+      window.addEventListener("focus", () => {
+        const timeAway = Date.now() - openedAt;
+        if (timeAway < 3000) {
+          notif.style.display = "block";
+          setTimeout(() => notif.style.display = "none", 3000);
+        } else {
+          localStorage.setItem(btnKey, "done");
+          btnEl.classList.add("completed");
+          checkProgress();
+        }
+      }, { once: true });
     }
-  }, { once: true });
-}
 
-btn1.onclick = () => {
-  window.open("http://www.youtube.com/@skibidipoplol", "_blank");
-  delayCheck("step1", btn1);
-};
+    btn1.onclick = () => {
+      window.open("http://www.youtube.com/@skibidipoplol", "_blank");
+      delayCheck("step1", btn1);
+    };
 
-btn2.onclick = () => {
-  window.open("http://www.youtube.com/@JosiahScripts", "_blank");
-  delayCheck("step2", btn2);
-};
+    btn2.onclick = () => {
+      window.open("http://www.youtube.com/@JosiahScripts", "_blank");
+      delayCheck("step2", btn2);
+    };
 
-function checkProgress() {
-  const step1 = localStorage.getItem("step1");
-  const step2 = localStorage.getItem("step2");
+    function checkProgress() {
+      const step1 = localStorage.getItem("step1");
+      const step2 = localStorage.getItem("step2");
 
-  if (step1 === "done") btn1.classList.add("completed");
-  if (step2 === "done") btn2.classList.add("completed");
+      if (step1 === "done") btn1.classList.add("completed");
+      if (step2 === "done") btn2.classList.add("completed");
 
-  if (step1 === "done" && step2 === "done") {
-    window.location.href = "key.html";
-  }
-}
-
-checkProgress();
-
-  </script>
-</body>
-</html><!-- key.html --><!DOCTYPE html><html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Cryzix Key Display</title>
-  <style>
-    body {
-      background: #0f0f0f;
-      font-family: 'Segoe UI', sans-serif;
-      color: white;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-      margin: 0;
-      padding: 20px;
-      text-align: center;
+      if (step1 === "done" && step2 === "done") {
+        window.location.href = "key.html";
+      }
     }
-    h1 {
-      color: #00bcd4;
-    }
-    #keyBox {
-      margin-top: 30px;
-      background: #1f1f1f;
-      padding: 20px;
-      border-radius: 10px;
-    }
-    #countdown {
-      margin-top: 10px;
-      font-size: 16px;
-      color: #00ffcc;
-    }
-  </style>
-</head>
-<body>
-  <h1>Your Cryzix Key</h1>
-  <div id="keyBox">
-    <p>Your Key:</p>
-    <strong id="keyDisplay"></strong>
-    <div id="countdown"></div>
-  </div>
-  <script>
-    const keyDisplay = document.getElementById("keyDisplay");
-    const countdownDisplay = document.getElementById("countdown");function generateKey() {
-  const part = () => Math.random().toString(36).substring(2, 8).toUpperCase();
-  return `Cryzix-${part()}${part()}`;
-}
 
-function startCountdown() {
-  const expireTime = parseInt(localStorage.getItem("keyExpire"));
-  function updateCountdown() {
-    const now = Date.now();
-    const diff = expireTime - now;
-    if (diff <= 0) {
-      localStorage.clear();
-      alert("Your key has expired.");
-      window.location.href = "index.html";
-      return;
-    }
-    const hours = Math.floor(diff / (1000 * 60 * 60));
-    const minutes = Math.floor((diff % (1000 * 60 * 60)) / (1000 * 60));
-    const seconds = Math.floor((diff % (1000 * 60)) / 1000);
-    countdownDisplay.textContent = `Key Expires In: ${hours}h ${minutes}m ${seconds}s`;
-  }
-  updateCountdown();
-  setInterval(updateCountdown, 1000);
-}
-
-function initializeKey() {
-  let savedKey = localStorage.getItem("cryzixKey");
-  let expire = localStorage.getItem("keyExpire");
-  if (!savedKey || !expire) {
-    const key = generateKey();
-    const expireTime = Date.now() + 48 * 60 * 60 * 1000;
-    localStorage.setItem("cryzixKey", key);
-    localStorage.setItem("keyExpire", expireTime.toString());
-    savedKey = key;
-  }
-  keyDisplay.textContent = savedKey;
-  startCountdown();
-}
-
-initializeKey();
-
+    checkProgress();
   </script>
 </body>
 </html>
