--- a/key.html
+++ b/key.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Cryzix Key Display</title>
   <style>
     body {
@@ -42,6 +42,12 @@
     <div id="countdown"></div>
   </div>
   <script>
+    // Protection check
+    if (localStorage.getItem("authorized") !== "true") {
+      alert("Unauthorized access. Redirecting...");
+      window.location.href = "index.html";
+    }
+
     const keyDisplay = document.getElementById("keyDisplay");
     const countdownDisplay = document.getElementById("countdown");
 
@@ -87,4 +93,4 @@
     initializeKey();
   </script>
 </body>
-  </html>
+</html>
