--- a/key.html
+++ b/key.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -21,38 +20,86 @@
     }
     h1 {
       color: #00bcd4;
+      font-size: 2.5rem;
+      font-weight: bold;
+      margin-bottom: 20px;
+    }
+    #supportBox {
+      background: #1c1c1c;
+      padding: 20px;
+      border-radius: 12px;
+      width: 80%;
+      max-width: 400px;
+      margin-bottom: 30px;
+      box-shadow: 0px 4px 10px rgba(0, 188, 212, 0.5);
+    }
+    #supportBox p {
+      font-size: 18px;
+      color: #fff;
+      margin-bottom: 15px;
+      line-height: 1.6;
+    }
+    #supportBox a {
+      text-decoration: none;
+      display: inline-block;
+      margin-top: 20px;
+    }
+    #supportBox button {
+      padding: 12px 20px;
+      background-color: #00bcd4;
+      border: none;
+      color: white;
+      font-size: 18px;
+      font-weight: bold;
+      border-radius: 8px;
+      transition: all 0.3s ease;
+    }
+    #supportBox button:hover {
+      background-color: #0097a7;
+      transform: scale(1.05);
+      box-shadow: 0px 8px 16px rgba(0, 188, 212, 0.6);
     }
     #keyBox {
-      margin-top: 20px;
       background: #1f1f1f;
       padding: 20px;
       border-radius: 10px;
+      box-shadow: 0px 4px 10px rgba(0, 188, 212, 0.5);
+    }
+    #keyDisplay {
+      font-size: 1.5rem;
+      font-weight: bold;
+      color: #00bcd4;
+      margin-bottom: 10px;
+    }
+    #copyBtn {
+      margin-top: 10px;
+      padding: 10px 18px;
+      background: #00bcd4;
+      border: none;
+      color: white;
+      font-size: 16px;
+      cursor: pointer;
+      border-radius: 6px;
+      transition: all 0.3s ease;
+    }
+    #copyBtn:hover {
+      background-color: #0097a7;
+      transform: scale(1.05);
+      box-shadow: 0px 8px 16px rgba(0, 188, 212, 0.6);
     }
     #countdown {
       margin-top: 10px;
       font-size: 16px;
       color: #00ffcc;
     }
-    #supportBox {
-      margin-bottom: 20px;
-    }
-    #copyBtn {
-      margin-top: 10px;
-      padding: 8px 14px;
-      background: #00bcd4;
-      border: none;
-      color: white;
-      cursor: pointer;
-      border-radius: 6px;
-    }
   </style>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
 </head>
 <body>
   <div id="supportBox">
-    <p>SUPPORT US MORE BY COMPLETING THIS:</p>
+    <p>✨ Support us by completing an offer below! Every action helps us keep the Cryzix system running smoothly.</p>
     <a href="https://lootdest.org/s?hbY8G6UQ&data=vKZ7P4VswueU5RD8FrkwWgPB97DE/9cpTDAwEQB5nOo%3D" target="_blank">
-      <button>Complete Offer</button>
+      <button>Complete Offer and Support Cryzix</button>
     </a>
   </div>
 
@@ -66,6 +113,25 @@
   </div>
 
   <script>
+    // Anti-F12 script to prevent opening developer tools
+    (function() {
+      document.addEventListener("contextmenu", function(e) {
+        e.preventDefault();
+      });
+
+      document.addEventListener("keydown", function(e) {
+        if (e.key === "F12") {
+          window.location.href = "https://JosiahScripts.github.io/Cryzix"; // Redirect if F12 is pressed
+        }
+      });
+
+      window.addEventListener("devtoolschange", function() {
+        if (document.hidden) {
+          window.location.href = "https://JosiahScripts.github.io/Cryzix"; // Redirect if DevTools is opened
+        }
+      });
+    })();
+
     const keyDisplay = document.getElementById("keyDisplay");
     const countdownEl = document.getElementById("countdown");
     const SALT = "Cryzixontop";
